2002-01-08  Patrick Burke  <takhisisii@yahoo.com.au>
	* audio/midi_drivers/forked_player.cc, conf/XMLEntity.cc: Fixed
	namespace related errors.

	* conf/Configuration.*: Upon loading up a new file, it clears the
	previous xmltree, rather then 'kind-of' overwriting it.
	* conf/XMLEntity.*: Fixed the destructors.
	* conf/xmain.cc: Added command line option to dump out the exult.cfg
	also when running it. All other output identical.

2002-01-07  Jeff Freedman  <jeff@amy.nerble.net>
	* paths.cc: Fixed Offscreen pathfinder bug (that I caused) when
	'best' was far away.

	* objs/egg.cc: Rewrote method for finding path eggs when
	teleporting.
	* objs/objs.cc:  Added qual, frnum parms to find_nearby_eggs().
	* gamewin.cc:  Removed list of path eggs.

2002-01-07  Tristan Tarrant  <nadir@users.sourceforge.net>
	* configure.in, mapedit/Makefile.am: it's libglade not glade

2002-01-07  Dancer Vesperman  <dancer@users.sourceforge.net>

	* configure.in: Move glade detection. Offer advice if exult-studio is enabled and glade is not detected.
	* mapedit/chunklst.cc, mapedit/chunklst.h: Fix broken compilation (standardise)

2002-01-07  Dancer Vesperman  <dancer@users.sourceforge.net>

	* usecode/ucxt/include/ucc.h, usecode/ucxt/include/ucdata.h, usecode/ucxt/include/ucfunc.h, usecode/ucxt/src/ucdata.cc, usecode/ucxt/src/ucdump.cc, usecode/ucxt/src/ucfunc.cc: Half-assed conversion to standard C++ so that code compiles.
	* WARNING: usecode/ucxt/src/ucfunc.cc: 830 relied on the return-value of std::string::insert, which DOES NOT HAVE ONE, post-standardisation. Behaviour may have changed.

2002-01-07  Dominik Reichardt <gigdr@tesionmail.de>
	* FAQ,ReadMe updated
	* docs/FAQ.html and ReadMe.html updated
	* docs/xml: faq.xml, docs.xml updated and ready for exult.sf.net

2002-01-07  Dancer Vesperman  <dancer@users.sourceforge.net>

	* usecode/ucxt/src/opcodes.cc, usecode/ucxt/include/opcodes.h: Convert to standard C++ to fix compile failures.
