@@ -1,3 +1,20 @@
+/*
+ *  Copyright (C) 2001-2002  The Exult Team
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU Library General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ */
 
 #ifndef OPCODES_H
 #define OPCODES_H
@@ -81,8 +98,9 @@ extern std::vector<std::pair<unsigned int, unsigned int> > opcode_jumps;
 extern std::map<unsigned int, std::string> bg_uc_intrinsics;
 extern std::map<unsigned int, std::string> si_uc_intrinsics;
 
-void init_static_usecodetables(const Configuration &config);
+void init_static_usecodetables();
 void init_usecodetables(const Configuration &config, bool noconf, bool verbose);
+
 
 #endif
 
