@@ -1,3 +1,20 @@
+/*
+ *  Copyright (C) 2001-2002  The Exult Team
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU Library General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ */
 
 #ifndef UCDATA_H
 #define UCDATA_H
@@ -111,7 +128,7 @@ class UCData
 		
 		long _search_opcode;
 		long _search_intrinsic;
-		long _search_func;
+		vector<unsigned int> search_funcs;
 
 		UCOptions options;
 };
