@@ -1,3 +1,21 @@
+/*
+ *  Copyright (C) 2001-2002  The Exult Team
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU Library General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ */
+
 #ifdef HAVE_CONFIG_H
 #  include <config.h>
 #endif
@@ -824,15 +842,15 @@ string demunge_ocstring(UCFunc &ucf, const FuncMap &funcmap, const string &asmst
 						// escape the appropriate characters...
 						// we'll only do it in the 'full' text output for the moment.
 						if(!commentformat)
-							for(string::iterator z=s.begin(); z!=s.end(); z++)
-								if(((*z)=='\"') || ((*z)=='\\'))
+							for(string::size_type i=0; i<s.size(); i++)
+								if((s[i]=='\"') || (s[i]=='\\'))
 								{
 									// Formerly:
 									// z= s.insert(z, 1, '\\');
 									// But as we all know, insert is void.
 									// What behaviour were we relying on?
-									s.insert(z, 1, '\\');
-									++z;
+									s.insert(i, "\\");
+									++i;
 								}
 						
 						str << s;
