@@ -1,3 +1,7 @@
+2002-01-09  Patrick Burke  <takhisisii@yahoo.com.au>
+	* usecode/ucxt/*: Added ability to specify multiple functions to
+	decompile on the command line. Also some namespace fiddling.
+
 2002-01-08  Patrick Burke  <takhisisii@yahoo.com.au>
 	* audio/midi_drivers/forked_player.cc, conf/XMLEntity.cc: Fixed
 	namespace related errors.
